          Release Notes for bweb 1.39.23

2006/10/26:
 - Fix javascript sort bug
 - Add french translation for bweb (template_dir must point to bweb/lang/fr/tpl)

2006/10/14:
 - Fix Mysql bug for pool display #639

2006/09/20:
 - Fix SQL query for pool display

2006/09/08:
 - Eject media takes Location as Autochanger Name
 - Email is now sent when request to move media

2006/09/06:
 - Can delete empty location
 - Drop Bconsole::send_cmd_with_drive and use drive= instead
 - Use JavaScript to display Human size and time

2006/08/31:
 - Add FileSet view action
 - Add view fileset to job_zoom

2006/08/26:
 - Add more graphics
   o job avg size/days
   o job avg size/hours
   o ...

2006/08/25:
 - Cleanup
 - Add more graphics
    o job/days
    o job/hours
    o size/days
    o size/hours
    o ... 

2006/08/24:
 - Add Location log to media zoom view 

2006/08/23:
 - Add client/media search box (with regexp)
 - Add menubar instead of plain menu
 - Drop all <button> element (works now with IE)
 - Fix big div
 - Add favicon

2006/08/22:
 - Add autochanger module (add/del/mod)
 - Add copyright notice
