@@ -1,4 +1,7 @@
-          Release Notes for bweb 1.39.23
+          Release Notes for bweb 1.39.26
+
+2006/10/31:
+ - remove Purged and Recycle volume size from total pool size
 
 2006/10/26:
  - Fix javascript sort bug
